# GoBang1

./: .gitignore  CMakeLists.txt  GoBang.cpp  README.md  analysisLine_my.cpp  analysisLine_my.h  analysisLine_opponent.cpp  analysisLine_opponent.h  initialize.cpp  initialize.h  main.cpp  play.cpp  play.h
include/: easyx.h  graphics.h
include/CppCoreCheck/: warnings.h
lib/: VSCustomNativeHeapEtwProvider.lib
