cmake_minimum_required(VERSION 3.17)
project(GoBang)
set(CMAKE_CXX_STANDARD 14)
set(INC_DIR ./include)
set(LINK_DIR ./lib)
include_directories(${INC_DIR})
link_directories(${LINK_DIR})
add_executable(GoBang main.cpp)
add_executable(test test.cpp)
add_executable(main2 main2.cpp)
target_link_libraries(GoBang EasyXa EasyXw VSCustomNativeHeapEtwProvider VsGraphicsHelper)