cmake_minimum_required(VERSION 3.17)
project(GoBang)
set(CMAKE_CXX_STANDARD 14)
set(INC_DIR ./include)
set(LINK_DIR ./lib)
include_directories(${INC_DIR})
link_directories(${LINK_DIR})
add_executable(GoBang GoBang.cpp initialize.cpp initialize.h analysisLine_my.cpp analysisLine_my.h analysisLine_opponent.cpp analysisLine_opponent.h play.cpp play.h)
target_link_libraries(GoBang EasyXa EasyXw VSCustomNativeHeapEtwProvider VsGraphicsHelper)